# carryoncarlos-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  openai_api_test.py  pyproject.toml
.github/workflows/: pipeline.yaml
app/: constants.py  input_parser.py  main.py  settings.py
app/api/: kiwi_output_parser.py  make_API_request.py  make_api_request.py
app/models/: flight_request.py  location_query.py  openai_responses.py
app/params/: destination.py  duration.py  other.py  time.py
app/tests/: main_tests.py
backend/: Dockerfile  destination_params.py  kiwi_output_parser.py  main.py  make_API_request.py  other_params.py  requirements.txt  test_AImessage  test_destinations.py  test_times.py  time_params.py
backend/parameter_functions/: other_params.py  time_params.py  time_template.py
data/: dest_examples.txt  dest_training_data.jsonl  test_cases.json  time_answers_edited.json  time_answers_ft_model.txt  time_answers_raw_formatted.json  time_examples.txt
fine-tuning/: README.md  data_validation.py  fine_tuning.py  log_parser.py  time_answer_script.py  time_ft_parser.py
flights_chat/: Dockerfile  chat.py  requirements.txt  test_func_call.py
flights_function/: .dockerignore  README.md  destination_params.py  duration_params.py  input_parser.py  kiwi_output_parser.py  main.py  main_tests.py  make_API_request.py  other_params.py  requirements.txt  test_cases.py  test_memory.py  test_times.py  time_params.py
terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
tests/: test_extract_info.py
(+37 files in other folders)
