[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "carryoncarlos"
version = "0.1.1"
dependencies = [
    "google-cloud-logging",
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "openinference-semantic-conventions",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "arize-phoenix",
]

[tool.setuptools.packages.find]
include = ["app"]
