[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "carryoncarlos"
version = "0.1.1"
dependencies = [
    "google-cloud-logging",
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "openinference-semantic-conventions",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "arize-phoenix",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
